# elma-classic

./: .clang-format  ABC8.CPP  ABC8.H  ADATOK.CPP  ADATOK.H  ALL.H  ANIM.CPP  ANIM.H  BEALLIT.CPP  BEALLIT.H  BESTTIME.CPP  BESTTIME.H  CUSTOM.CPP  CUSTOM.H  DIALOG.CPP  DIALOG.H  DIALOG32.CPP  DIALOG32.H  DIGIT.CPP  DIGIT.H  DISPLAY.CPP  DISPLAY.H  DOBOZ.CPP  DOBOZ.H  D_PIC.CPP  ECSET.CPP  ECSET.H  EDITHELP.CPP  EDITHELP.H  EDITMENU.CPP  EDITMENU.H  EDITPLAY.CPP  EDITPLAY.H  EDITTOLT.CPP  EDITTOLT.H  EDITTOOL.CPP  EDITTOOL.H  EDITUJ.CPP  EDITUJ.H  ED_CHECK.CPP  (+131 more)
.github/workflows/: ci.yaml
F_WIN/: M_SOUND.H  W_ALL.H  W_DD.CPP  W_DI.CPP  W_HHIGH.CPP  W_K.CPP  W_NEMPUB.H  W_SOUND2.CPP  W_V.CPP
docs/: BUILDING.md
docs/vscode/: launch.json  tasks.json
